--- a/two-weeks-2021-04-05.md
+++ b/two-weeks-2021-04-05.md
@@ -1,45 +1,146 @@
 ---
 title: Two weeks!
-number: 
+number: 1131
 tags: [Autobiographical](index-biographical)
-blurb: 
-version: 0.1
-released: 
-current: 2021-04-02
+blurb: Starting my new life.
+version: 1.0
+released: 2021-04-05
+current: 
 ---
-It's been two weeks since my heart attack.  Well, slightly less than
-two weeks.  My heart attack was in the late evening.  I'm writing
-this musing [1] in the early evening.  I've already [mused about the
-event and the immediate aftermath](time-for-a-change-2021-03-27).  I
-think it's time to muse a bit about how things are going.
+It's been two weeks since my heart attack.  Well, slightly less
+than two weeks.  My heart attack was in the late evening.  I'm
+writing this musing [1] in the early evening.  I've already [mused
+about the event and the immediate aftermath](time-for-a-change-2021-03-27).
+I think it's time to muse a bit about how things are going.
 
-Brain is not functioning as well, but it's still functioning.  Some
-things seem harder to bring to the forefront.  For example, the traditional 
-malloc example I use in 282 was harder to bring to mind.  On the other
-hand, I could look at [an example from K&P](...) and think of how to
-adapt it to class.
+I'm happy.  As I've told my students at the start of the first day
+of class, I'm glad to be alive.  I'm not consistently happy, but I'm
+feeling some real happiness.  It helps that I had a great weekend
+with the family home.  We played a board game [2], discussed a book
+as part of Rebelsky Book Club [3], talked [4], watched TV [5], hung
+out together, stuff like that.
 
-Trying to avoid Grinnell stress.  It's hard.  Being treated rudly by
-an administrator and then getting ghosted by the same administrator
-makes me upset.  Arguing with an administrator I highly respect is no
-fun.  I'm trying to ignore it.  And I'm trying to stay away from
-administrative stuff.  I will not serve as chair for the rest of the
-year [2].  I will not attend tomorrow's faculty meeting; if I can help
-it, I will not attend any meetings for the remainder of the semester.
+The wide variety of cards, letters, emails, Facebook notes, and such have
+also made a positive difference.  It's nice to know that others care [6].
+Of course, it also bothers me that many people have worries about their
+own stress levels at Grinnell and the effects it has on their bodies and
+their lives.  At some point, I'll advocate for change at Grinnell.  I know
+others already are.
 
-I decided to teach.  Teaching adds a bit of stress to my life, but it
-adds significantly more joy.  Plus, it's an excuse to write.
+I'll admit that I'm not sure how well my brain is functioning.  It's
+functioning, but I don't think that my thinking to 100%.  Some
+things seem harder to bring to the forefront.  For example, the
+traditional malloc example I use in 282 was harder to bring to mind.
+On the other hand, I could pick up Kernighan and Plauger's _The
+Elements of Programming Style_, read a Fortran example, and think
+about how to adapt it to CSC-282 [7].  Nonetheless, I'm finding
+myself making strange mistakes.  I unplugged my computer from the
+external hard drives without unmounting them.  I never do that [8].
+I found myself overwriting files and otherwise clobbering things
+when copying files at the command line.  I rarely do that.  So, I
+have some worries about my mental functioning.  But that's not
+surprising.
 
-In Cardiac Rehab.
+I'm trying to avoid Grinnell-related stress.  It's hard.  Being treated
+rudely by an administrator and then getting ghosted by the same
+administrator makes me upset.  Arguing with a different administrator I
+highly respect is no fun.  I'm trying not to worry about the former and
+assume that the latter will be resolved. 
 
-Walking outside of that, too.
+I'm also trying to stay away from administrative stuff.  I will not
+serve as chair for the rest of this year [10].  I will not participate
+in tomorrow's faculty meeting; if I can help it, I will not participate
+in any meetings for the remainder of the semester.  I know that the
+upcoming discussions of the First-Year Experience Course [11].
 
-Watching what I eat, particularly saturated fats and sodium.  I'm not
-always doing that as well as I should.  (Whoops.  forgot to check the
-can of tuna.)
+But I decided to teach.  Teaching adds a bit of stress to my life,
+but it adds significantly more joy.  Plus, it's an excuse to write.
+I'm teaching two courses this spring, one old (CSC-282, _Thinking
+in C and Unix_) and one new, or at least new to me (CSC/PSY/TEC-232,
+_Human-Computer Interaction_).  Don't worry, each meets only two days
+per week, and CSC-282 is a pass/fail course [12].
+
+I've started Cardiac Rehab.  That seems to be going well.  I'm
+building a bit of stamina, but I know that I have work to do.
+Walking outside of that, too.  And I'm literally walking outside.
+It's nice.
+
+I'm watching what I eat, particularly saturated fats and sodium.
+I'm generally trying to check labels, but I'm not always doing that
+as well as I should [14].  Nonetheless, I'm sure that my sodium 
+is way down.  It will take a while to get used to cooking without
+salt, but I think I can manage.
+
+Unfortunately, I lost a week of work [16] and most work doesn't
+disappear.  My students from last term deserve their grades.  My
+new students for this term deserve courses that are ready to go.
+I don't have either in place yet [17].  
+
+I'm finding it easier to say "That's enough work for today."  That's
+not helping with those prior issues, but I think that's okay.  I also
+have no classes on Wednesday, so I'll have some time to catch up.  Last
+week, I had some times when I thought I should be working, but couldn't.
+But I always have those moments.  So I'm not too worried.
+
+What else?  The edema that's been in my legs for the past year is gone.
+My blood pressure is good (low 120's over 70's or 60's, on most days).
+I've lost more than ten pounds, but I think a decent amount of it is fluid
+weight.  And I know that I have a long way to go.
+
+But I think if I stay away from the things at Grinnell that build stress
+and emphasize those that make me happy, I'll have the time and energy to
+focus on my wellness, my diet, my exercise, my sleep, and everything else.
+
+So, how am I doing two weeks after my heart attack?  Pretty well.
+Fingers crossed that I stay that way [18].
 
 ---
 
 [1] Well, finishing writing this musing.
 
-[2] Next year is still to be decided.
+[2] _Welcome to ... Your perfect home_.  I just wish we'd played more
+than once.
+
+[3] _The Leadership Secrets of Attila the Hun_, which is much, much
+better if you take it as a humor book.
+
+[4] Those who have participated in a Rebelsky meal conversation likely
+grok the chaotic joy.
+
+[5] The latest _Falcon and the Winter Soldier_.  The latest _Saturday
+Night Live_.  Way too much of some stupid YouTube series on D&D.  Things
+like that.
+
+[6] I would know/believe they care even without all that.  But it's still
+nice.
+
+[7] I even started to muse about it.  Perhaps I'll even post the musing.
+
+[8] Well, I almost never do that.
+
+[10] Next year is still to be decided.
+
+[11] Tomorrow's faculty meeting.  Next week's SciDiv meeting.  The following
+week's faculty meeting.  Or at least that's what I think the schedule is.
+As I said, my mind is not working great.
+
+[12] S/D/F, in Grinnell speak.
+
+[14] The other day, Michelle reminded me that tuna is likely to have a
+good amount of sodium. Who knew? [15]
+
+[15] Michelle, obviously.
+
+[16] I realize that much of it was labeled as "Spring Interim Period".
+But my Spring Interim Period was to be filled with grading, class prep,
+recommendation writing, and administrative stuff.  I wrote the recommendation
+letters, finished the major administrative paperwork, and started the
+class prep.  I pawned off some of the grading, but not all of it.
+
+[17] Well, I didn't when I drafted this.  I have rough drafts of
+both courses up now, and I've taught for a few days, but I have
+more prep to do.
+
+[18] Don't worry.  I realize that my wellness requires more than
+crossed fingers.  At this point, staying well requires focused
+intentionality.  I'm striving for that.
