--- a/junit-2021-08-30.md
+++ b/junit-2021-08-30.md
@@ -3,9 +3,9 @@ title: A quick and dirty intro to command-line JUnit testing
 number: 1164
 tags: [Miscellaneous](index-misc), Technical
 blurb: Perhaps not so quick.  Definitely way too dirty.
-version: 1.0
+version: 1.0.1
 released: 2021-08-30
-current: 
+current: 2021-08-30
 ---
 As a teacher of computer science and computer programming, I try
 to inculcate a wide variety of habits in my students.  One of those
@@ -85,7 +85,7 @@ an executable that adds a null at index 5 might read
 `() -> a.set(5, null)`.
 
 Suppose we want to test whether adding that null throws an exception (which
-is should, if the ArrayList has fewer than four elements).  Here's what we
+it should, if the ArrayList has fewer than four elements).  Here's what we
 might write.
 
 ```
