Minor update to the HP musing.

--- a/hp-2021-09-07.md
+++ b/hp-2021-09-07.md
@@ -3,19 +3,24 @@ title: What does HP stand for?
 number: 1165
 tags: [Rants](index-rants), technology
 blurb: I hate computers (and printers).
-version: 1.0
+version: 1.1
 released: 2021-09-07
-current: 
+current: 2021-09-07
 ---
 For the past month or so, whenever I've tried to print from my
 MacBook to Escher, the HP Color LaserJet 4700dn in the CS department, I've
 received an error message.  Something like
 
 > _HPDM Framework will damage your computer.
-  This issue has been reported to Apple._ [1]
+  This issue has been reported to Apple to protect other users._ [1]
 
-I could still print when I hit "Ok", but it was annoying.  And I suppose
-it was worrisome.  Recently, I decided to deal with the issue.
+An interesting message, isn't it?  Not "may damage", but "will damage".
+And my Mac feels it necessary to report the error.  For a brief moment,
+I thought Apple might contact me for followup.  But no.
+
+In any case, I could still print when I hit "Ok", but it was annoying.
+And I suppose it was worrisome.  Recently, I decided to deal with
+the issue.
 
 So I did what any sensible person would do.
 
@@ -40,7 +45,7 @@ Strangely enough, we got an error message while doing that.  I think
 it read.
 
 > fax.backend will damage your computer.  This error has been reported
-  to Apple.
+  to Apple to protect other users.
 
 We ignored it for the time being.
 
