--- a/hp-2021-09-07.md
+++ b/hp-2021-09-07.md
@@ -3,7 +3,7 @@ title: What does HP stand for?
 number: 1165
 tags: [Rants](index-rants), technology
 blurb: I hate computers (and printers).
-version: 1.1
+version: 1.2
 released: 2021-09-07
 current: 2021-09-07
 ---
@@ -162,6 +162,14 @@ things stand, at least for the time being.
 
 Should I report the software I installed to ITS?  I suppose I should.
 Maybe tomorrow.
+
+---
+
+**Postscript**: In case it wasn't clear, I found the Help Desk helper
+helpful.  They didn't quite solve my problem, but it looked like they
+had at the point I left the Help Desk.  And they chose an appropriate
+solution within their knowledge base.  That's why "Google it first"
+was not one of the lessons above.
 
 ---
 
