Fix minor typo in 1207 before release.

--- a/soccer-2022-10-27.md
+++ b/soccer-2022-10-27.md
@@ -9,7 +9,7 @@ current:
 ---
 This semester, Grinnell’s Rosenfield Program, American Studies concentration, and PE department have been co-sponsoring a variety of events related to the 50th anniversary of [Title IX](title-ix-2022-06-23).  This week, there was an illuminating panel about different Grinnellians' experiences with women's sports at Grinnell on Monday and an informative and fascinating talk by [Jaime Schultz](https://acquia-prod.hhd.psu.edu/contact/jaime-schultz-phd) on Tuesday. Both conversations touched on the next step of increasing participation for women in sports: ensuring that participation includes not just the players but also the coaches and administrators.
 
-Hence, I was interested to see in today's _New York Times_, that tomorrow will mmark [the first NCAA Men's Soccer match in which both coaches are women](https://www.nytimes.com/2022/10/26/sports/soccer/nyu-chicago-women-soccer-coaches.html).  In some ways, that's an important step forward, as it suggests an increased understanding that women can make excellent coaches [1].  However, it's *fifty years* since Title IX. You'd hope that it would have happened sooner than this.  Plus, these are division 3 teams.  When are we getting women coaches for men's D1 soccer?
+Hence, I was interested to see in today's _New York Times_, that tomorrow will mark [the first NCAA Men's Soccer match in which both coaches are women](https://www.nytimes.com/2022/10/26/sports/soccer/nyu-chicago-women-soccer-coaches.html).  In some ways, that's an important step forward, as it suggests an increased understanding that women can make excellent coaches [1].  However, it's *fifty years* since Title IX. You'd hope that it would have happened sooner than this.  Plus, these are division 3 teams.  When are we getting women coaches for men's D1 soccer?
 
 The article also seems to get its facts wrong.  It implies that Kim Wyant, NYU's head coach, was the first female head coach of a men's soccer team.  But that's not even close to true.  Wyant started in 2015.  Grinnell's men's soccer team had a female head coach back in the late 1990s, the legendary [Jenny Wood](https://pioneers.grinnell.edu/honors/grinnell-college-athletics-hall-of-fame/jenny-wood/46) [3].  However, Wood was also coach of the women's team, so it may be that Wyant is the first men's soccer coach who is not a dual-sport coach [5].
 
