More pre-release updates to the salary musing.

--- a/salaries-2023-05-06.md
+++ b/salaries-2023-05-06.md
@@ -3,7 +3,7 @@ title: Salaries
 number: 1227
 tags: [Grinnell](index-grinnell), rants, data
 blurb:  Why do I care?
-version: 0.1
+version: 0.2
 released: 2023-05-06
 current: 2023-05-05
 ---
@@ -35,7 +35,7 @@ The _Chronicle_/IPEDS report suggests that the average full professor salary at 
 
 From those data, Reed is at the bottom of our peer institutions and is one of the few institutions where women full professors make significantly more than male full professors.
 
-But when we turn to the AAUP, we see something very different.  There, the reported average full professor salary is $128,000.
+But when we turn to the AAUP, we see something very different.  There, the reported average full professor salary at Reed is $128,000.
 
 <img src="images/reed-aaup.png" width=600 alt="A screen shot of a page from a 2022 report from the Chronicle of Education.  Reed is highlighted, although many other institutions appear.  Full professor salaries are listed as 128.0 (meaning $128,000), associate at 94.0, assistant at 80.1, and lecturer at 82.7."/>
 
@@ -45,11 +45,15 @@ Since Grinnell uses AAUP data for its calculations, I decided to stick with thos
 
 At the associate and assistant levels, Grinnell seems to be doing appropriately well.  That is, our average salary at each level is about the median average salary at our peer institutions [12,14].  Oberlin hasn't reported for 2022-23.  For the other fifteen, Grinnell is ninth at the associate level and eighth at the assistant level.  Oberlin generally pays less than Grinnell, so those numbers are likely to stick.
 
-Unfortunately, our long-term trend of doing worse at the full professor level continues.  Currently, we're eleventh at that level, about $4,000 below the median.  Even if I assume that Oberlin average salaries remained exactly the same, we're still eleventh and about $4K below the median.  Since we were tenth last year and only $2,000 below the median, we're going in the wrong direction.
+Unfortunately, our long-term trend of doing worse at the full professor level continues.  Currently, we're eleventh at that level. Even if I assume that Oberlin average salaries remained exactly the same, we're still eleventh. Since we were tenth last year, and we've approximately doubled how far off the median we are in terms of salary, we're going in the wrong direction.
 
 That's all I have to report right now.  We should see the full set of numbers at the next Faculty Meeting.
 
-In all honesty, the faculty receive wonderful salaries at Grinnell.  And, as I've said before, it's perhaps more important to see the College addressing the too-low staff salaries [15].  Still, I'd like to see the institution's budget process achieving our salary goals.
+In all honesty, the faculty receive wonderful salaries at Grinnell.  And, as I've said before, it's perhaps more important to see the College addressing the too-low staff salaries [15].  There's a lot to do.  Grinnell should also make sure that both faculty and staff get at least cost-of-living increases and that the staff pool is about the same as the faculty raise pool, at least in terms of percentages [16].  In fact, let's make those salary goals, too.  And let's work hard meet those new goals, as well as the old faculty median salary goals.
+
+---
+
+**_Postscript_**: Among the salaries issues missing from the main body of the musing is the question of salary inverstions.  A salary inversion is when a new hire makes more than existing faculty.  I had thought our policy was to raise the existing faculty member's salary to match the new salary; at least that's what I experienced when we hired new faculty in my fifth-or-so and eighth-or-so years at Grinnell [18].  But I think I heard the Dean say last year that addressing salary inversions is no longer automatic.  It should be.
 
 ---
 
@@ -80,3 +84,9 @@ In all honesty, the faculty receive wonderful salaries at Grinnell.  And, as I'v
 [14] "median average salary of peers" not "average median salary of peers".  Order matters.
 
 [15] That's a hint to the trustees who read my musings.  We have wonderful staff at Grinnell.  Let's compensate them better.  Why should we rely primarily on regional salaries as the comparison metrics for these amazing people?
+
+[16] For example, if we set the faculty raise pool at 4.5% of the faculty salary budget line [17], we should set the staff raise pool at about 4.5% of the staff salary budget line.
+
+[17] I'm an optimist.
+
+[18] Does it bother me that a new assistant professor was hired at more than I was making as an associate professor?  Yes, a bit.
