Yet another update to the salary musing.

--- a/salaries-2023-05-06.md
+++ b/salaries-2023-05-06.md
@@ -3,9 +3,9 @@ title: Salaries
 number: 1227
 tags: [Grinnell](index-grinnell), rants, data
 blurb:  Why do I care?
-version: 0.2
-released: 2023-05-06
-current: 2023-05-05
+version: 0.3
+released: 2023-05-07
+current: 2023-05-06
 ---
 The other day, _Chronicle_ [1] released the latest version of their [faculty salary data tool](https://www.chronicle.com/article/explore-faculty-salaries-at-3-500-colleges-2012-20) covering up through the 2021--22 academic year.  And, as too often happens, I decided that I wanted to explore the data.
 
@@ -47,13 +47,15 @@ At the associate and assistant levels, Grinnell seems to be doing appropriately 
 
 Unfortunately, our long-term trend of doing worse at the full professor level continues.  Currently, we're eleventh at that level. Even if I assume that Oberlin average salaries remained exactly the same, we're still eleventh. Since we were tenth last year, and we've approximately doubled how far off the median we are in terms of salary, we're going in the wrong direction.
 
-That's all I have to report right now.  We should see the full set of numbers at the next Faculty Meeting.
+There was also another question in the back of my head.  Last year, Faculty Chair Praitis was able to negotiate a one-time 3% bonus for faculty and staff to make up for the lack of raises in the first year of the pandemic [15].  I wondered whether they'd include that bonus in reporting our salaries. Doing so would make us look much better in our peer comparison group, but it would be a misleading comparison.  It's not that I suspected anyone of intentionally misleading us; it's that somethings people forget about these things.  Fortunately, whoever reported our salaries appears to have reported our contractual salaries, not the amount the College expected to pay us this year.  Yay!  I don't have to ask about it at the next faculty meeting.
 
-In all honesty, the faculty receive wonderful salaries at Grinnell.  And, as I've said before, it's perhaps more important to see the College addressing the too-low staff salaries [15].  There's a lot to do.  Grinnell should also make sure that both faculty and staff get at least cost-of-living increases and that the staff pool is about the same as the faculty raise pool, at least in terms of percentages [16].  In fact, let's make those salary goals, too.  And let's work hard meet those new goals, as well as the old faculty median salary goals.
+That's all I have to report right now.  We should see the full set of numbers at the next Faculty Meeting [16].
+
+In all honesty, the faculty receive wonderful salaries at Grinnell.  And, as I've said before, it's perhaps more important to see the College addressing the too-low staff salaries [17].  There's a lot to do.  Grinnell should also make sure that both faculty and staff get at least cost-of-living increases and that the staff pool is about the same as the faculty raise pool, at least in terms of percentages [18].  In fact, let's make those salary goals, too.  And let's work hard meet those new goals, as well as the old faculty median salary goals.
 
 ---
 
-**_Postscript_**: Among the salaries issues missing from the main body of the musing is the question of salary inverstions.  A salary inversion is when a new hire makes more than existing faculty.  I had thought our policy was to raise the existing faculty member's salary to match the new salary; at least that's what I experienced when we hired new faculty in my fifth-or-so and eighth-or-so years at Grinnell [18].  But I think I heard the Dean say last year that addressing salary inversions is no longer automatic.  It should be.
+**_Postscript_**: Among the salaries issues missing from the main body of the musing is the question of salary inverstions.  A salary inversion is when a new hire makes more than existing faculty.  I had thought our policy was to raise the existing faculty member's salary to match the new salary; at least that's what I experienced when we hired new faculty in my fifth-or-so and eighth-or-so years at Grinnell [20].  But I think I heard the Dean say last year that addressing salary inversions is no longer automatic.  It should be.
 
 ---
 
@@ -83,10 +85,14 @@ In all honesty, the faculty receive wonderful salaries at Grinnell.  And, as I'v
 
 [14] "median average salary of peers" not "average median salary of peers".  Order matters.
 
-[15] That's a hint to the trustees who read my musings.  We have wonderful staff at Grinnell.  Let's compensate them better.  Why should we rely primarily on regional salaries as the comparison metrics for these amazing people?
+[15] Only for those employed at Grinnell at the start of the pandemic and still employed at Grinnell in spring 2023.
 
-[16] For example, if we set the faculty raise pool at 4.5% of the faculty salary budget line [17], we should set the staff raise pool at about 4.5% of the staff salary budget line.
+[16] I'm sure that Clark appreciates that.
 
-[17] I'm an optimist.
+[17] That's a hint to the trustees who read my musings.  We have wonderful staff at Grinnell.  Let's compensate them better.  Why should we rely primarily on regional salaries as the comparison metrics for these amazing people?
 
-[18] Does it bother me that a new assistant professor was hired at more than I was making as an associate professor?  Yes, a bit.
+[18] For example, if we set the faculty raise pool at 4.5% of the faculty salary budget line [19], we should set the staff raise pool at about 4.5% of the staff salary budget line.
+
+[19] I'm an optimist.
+
+[20] Does it bother me that a new assistant professor was hired at more than I was making as an associate professor?  Yes, a bit.
