Minor change to latest using.

--- a/salaries-2023-05-07.md
+++ b/salaries-2023-05-07.md
@@ -1,11 +1,11 @@
 ---
-title: Salaries
+title: Faculty salaries
 number: 1228
 tags: [Grinnell](index-grinnell), rants, data
 blurb:  Why do I care?
-version: 1.0
+version: 1.0.1
 released: 2023-05-07
-current:
+current: 2023-05-07
 ---
 The other day, _Chronicle_ [1] released the latest version of their [faculty salary data tool](https://www.chronicle.com/article/explore-faculty-salaries-at-3-500-colleges-2012-20) covering up through the 2021--22 academic year.  And, as too often happens, I decided that I wanted to explore the data.
 
