Fix capitalization of regions.

--- a/salaries-2023-05-07.md
+++ b/salaries-2023-05-07.md
@@ -3,9 +3,9 @@ title: Faculty salaries
 number: 1228
 tags: [Grinnell](index-grinnell), rants, data
 blurb:  Why do I care?
-version: 1.0.1
+version: 1.0.2
 released: 2023-05-07
-current: 2023-05-07
+current: 2023-05-17
 ---
 The other day, _Chronicle_ [1] released the latest version of their [faculty salary data tool](https://www.chronicle.com/article/explore-faculty-salaries-at-3-500-colleges-2012-20) covering up through the 2021--22 academic year.  And, as too often happens, I decided that I wanted to explore the data.
 
@@ -23,7 +23,7 @@ That's one of the two.  The other was also about a decade ago.  Perhaps more.  I
 
 After reading those reflections, you probably understand a bit more about my psyche.  And you'll realize that I felt compelled to look at salaries at Grinnell and our peer institutions.
 
-First, I grabbed our [list of peer institutions](https://www.grinnell.edu/about/leadership/offices-services/institutional-research/peer-schools).  For those who don't want to follow the link, they are Amherst, Bowdoin, Carleton, Colorado, Davidson, Kenyon, Macalester, Oberlin, Pomona, Reed, Smith, St. Olaf, Swarthmore, Vassar, Washington & Lee, and Williams.  Some midwest.  Some east coast.  Even a few on the west coast.  Some rural.  Some less so.  Some more highly ranked.  Some less highly ranked.  It's a good peer set.  Those of you who consider institutional peer lists an exciting topic might enjoy [_Chronicle's visualization tool_](https://www.chronicle.com/article/who-does-your-college-think-its-peers-are).  The tool helped me realize that it's strange that we don't include Hamilton in our peer group, given that they are one of the few institutions with an open curriculum.  I also see that nine of the sixteen schools we list as peers reciprocate the listing.
+First, I grabbed our [list of peer institutions](https://www.grinnell.edu/about/leadership/offices-services/institutional-research/peer-schools).  For those who don't want to follow the link, they are Amherst, Bowdoin, Carleton, Colorado, Davidson, Kenyon, Macalester, Oberlin, Pomona, Reed, Smith, St. Olaf, Swarthmore, Vassar, Washington & Lee, and Williams.  Some Midwest.  Some East Coast.  Even a few on the West Coast.  Some rural.  Some less so.  Some more highly ranked.  Some less highly ranked.  It's a good peer set.  Those of you who consider institutional peer lists an exciting topic might enjoy [_Chronicle's visualization tool_](https://www.chronicle.com/article/who-does-your-college-think-its-peers-are).  The tool helped me realize that it's strange that we don't include Hamilton in our peer group, given that they are one of the few institutions with an open curriculum.  I also see that nine of the sixteen schools we list as peers reciprocate the listing.
 
 Next, I went to find last year's report on how Grinnell is doing relative to its peers.  That was harder to find than I expected.  It wasn't in [the minutes](https://grinco.sharepoint.com/:w:/r/sites/dean/_layouts/15/Doc.aspx?sourcedoc=%7B545007F6-637F-4037-B34A-3DCC78D70C5B%7D&file=FacMtgMin_05-16-22-Amended%20Aug29.docx&action=default&mobileredirect=true) [7], even though it's supposed to be [8].  There was a summary in [the report of the chair of the faculty](https://grinco.sharepoint.com/sites/dean/Annual_Reports/Chair_of_the_Faculty_Report_FINAL_2021-22.pdf) [10].  However, for the reasons I've discussed above, I want to see the data and not just a summary. So I looked on the Dean's website.  Failing to find the data on the Dean's web site, I asked some folks.
 
